# vir-reflect-light

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README.md  README.md.license  check-result.sh  test.cpp
.github/workflows/: CI.yml  fair-software.yml
vir/: fixed_string.h  reflect-light.h  simple_tuple.h
